# video_array

./: .gitignore  README.md  pyproject.toml  video_iio.py  with_imageio.ipynb
Notebooks/: with_imageio.ipynb  with_pyav.ipynb
src/video_array/: video.py  video_iio.py
