[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "video_array"
version = "0.0.1"
authors = [
    { name="Chris Wood", email="cjw@stowers.org"},
]
description = "Treat video files like numpy arrays"
readme = "README.md"
requires-python = ">=3.9"

